# LightRAG

./: .env.example  .gitignore  book2.txt  main.py  pyproject.toml
gui/: gui.py
lightrag/: lightrag.py
operation/: operate.py
operation/prompt/: prompt.txt
prompt/: prompt.txt
